css/style.css
body {
  font-family: "Baloo 2", cursive;
}
section {
  display: flex;
  padding-left: 15%;
  padding-right: 15%;
  padding-top: 5%;
  padding-bottom: 5%;
}

.header {
  background-image: url("../images/shapes/Frame 59.jpg");
  background-repeat: no-repeat;
}

.half-width {
  width: 50%;
}

.header-text {
  font-size: 30px;
}
.header-text span {
  color: orange;
}

.header-text h1 {
  font-size: 40px;
}

.header-text p {
  color: gray;
  margin-bottom: 10%;
}

.header-image img {
  width: 100%;
  padding: 10%;
}

.aboutme-image img {
  width: 50%;
}

.aboutme-text {
  font-size: 30px;
}

.aboutme-text h1 {
  color: gray;
  font-size: 30px;
}

.aboutme-text p {
  margin-bottom: 10%;
}
.button-overlay {
  text-decoration: none;
  padding: 10px 40px;
  background-image: linear-gradient(#5a3f37, #2c7744);
  border-radius: 20px;
  color: #fff;
}

.aboutme {
  background-image: url(../images/shapes/Frame58.jpg);
  background-repeat: no-repeat;
}

.myrecipies {
  display: block;
  margin-left: 20%;
  margin-right: 20%;
  text-align: center;
  color: gray;
  font-size: 20px;
}

.title img {
  width: 80%;
  padding-left: 9%;
  margin-top: 5%;
}

.recipies-title {
  display: flex;
  gap: 10%;
}

.title {
  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
  border-radius: 20px;
}

.title-text {
  padding: 20px;
}

.stat {
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
  border-radius: 20px;
  margin: 0 20%;
  height: 20px;
}

.footer {
  margin-top: 80px;
  display: block;
  text-align: center;
  background-color: black;
  color: gray;
}

.footer span {
  color: orange;
}

.footer h1 {
  color: red;
}

